# SScom-scraper

./: README.md  config.json  main.py  pyproject.toml  readme.md  requirements.txt  scraper.py
src/SScom/: scraper.py
